@@ -219,6 +219,7 @@ checkForFileExistenceBeforeDownload.text=Check for file existence on the server 
 checkServiceAsIconOnly.text=Represent download service only by an icon without text in table
 checkSlimLinesInHistory.text=Slim lines in History dialog
 checkBringToFrontWhenPasted.text=Bring application to the top when clipboard monitoring detects links
+checkZoomCaptchaImage.text=Zoom captcha images for better legibility
 
 checkRecheckFilesOnStart.text=Re-check for file existence on the server when application starts
 invalidURL=Plugin server address is not valid URL:%n%s
